--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,19 +8,19 @@
         android:id="@+id/button_gotoLogin"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/ic_arrow_back" />
+        android:background="@drawable/ic_baseline_arrow_back_24" />
     <ImageView
         android:layout_width="match_parent"
-        android:layout_margin_bottom="30dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_height="175dp"
+        android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:src="@drawable/logo" />
 
     <TextView
         android:id="@+id/textView_sign_up"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="100dp"
         android:gravity="center"
         android:text="회원가입"
         android:textColor="@color/main"
