--- a/app/src/main/res/drawable/calendar_select_background.xml
+++ b/app/src/main/res/drawable/calendar_select_background.xml
@@ -6,7 +6,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/main"></stroke>
+                android:color="@color/colorPrimaryDark"></stroke>
             <corners android:radius="4dp"></corners>
             <solid android:color="#f0f0f0"></solid>
             <size
