--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -5,21 +5,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_margin="30dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/logo" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/border_bottom"
+        android:orientation="vertical"
+        android:paddingVertical="30dp">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginHorizontal="30dp"
+            android:src="@drawable/logo" />
+    </LinearLayout>
     <TextView
         android:id="@+id/textView_info"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center"
         android:text="기본정보입력"
-        android:textColor="@color/main"
+        android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"/>
 
@@ -34,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
-            android:backgroundTint="@color/main"
+            android:backgroundTint="@color/colorPrimary"
             android:ems="10"
             android:hint="닉네임설정"
             android:inputType="textPersonName" />
@@ -44,17 +50,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
-            android:backgroundTint="@color/main"
+            android:backgroundTint="@color/colorPrimary"
             android:ems="10"
             android:hint="초기 식비 설정"
             android:inputType="number" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/button_member_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/btn"
+            android:background="@drawable/solid_button"
             android:gravity="center"
             android:text="확인"
             android:textColor="@color/white"
