--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,20 +4,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_margin="30dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/logo" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/border_bottom"
+        android:orientation="vertical"
+        android:paddingVertical="30dp">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginHorizontal="30dp"
+            android:src="@drawable/logo" />
+    </LinearLayout>
     <TextView
         android:id="@+id/textView_login"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center"
         android:text="로그인"
-        android:textColor="@color/main"
+        android:textColor="@color/colorPrimary"
         android:textSize="30sp"
         android:textStyle="bold"/>
 
@@ -32,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:backgroundTint="@color/main"
+            android:backgroundTint="@color/colorPrimary"
             android:ems="10"
             android:hint="email"
             android:inputType="textEmailAddress" />
@@ -42,25 +49,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:backgroundTint="@color/main"
+            android:backgroundTint="@color/colorPrimary"
             android:ems="10"
             android:hint="패스워드"
             android:inputType="textPassword" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/button_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/solid_button"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/btn"
             android:text="로그인하기"
             android:textColor="@color/white"/>
 
-        <androidx.appcompat.widget.AppCompatButton
+
+        <Button
             android:id="@+id/button_gotoSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn"
+            android:background="@drawable/solid_button"
             android:text="회원가입"
             android:textColor="@color/white"
             />
