--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.home.HomeFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -16,15 +15,14 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="60dp"
         android:clickable="true"
-        android:src="@drawable/ic_add_black_24dp" />
+        android:src="@drawable/ic_baseline_add_24"/>
 
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/materialCalendar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        app:mcv_selectionColor="@color/main"
-        tools:ignore="MissingClass">
-    </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
+        app:mcv_selectionColor="@color/colorPrimaryDark"
+        tools:ignore="MissingClass"></com.prolificinteractive.materialcalendarview.MaterialCalendarView>
 
 </RelativeLayout>
