--- a/app/src/main/res/layout/popup_activity.xml
+++ b/app/src/main/res/layout/popup_activity.xml
@@ -1,65 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="30dp"
     android:background="#eeeeee"
-    android:orientation="vertical"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content">
-
+    android:orientation="vertical">
     <!-- 타이틀바 -->
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <TextView
-            android:text="가계부 내용"
-            android:textSize="20sp"
-            android:textColor="#fff"
-            android:gravity="center"
-            android:background="@color/colorPrimaryDark"
+            android:id="@+id/text_popup_title"
             android:layout_width="match_parent"
-            android:layout_height="53dp" />
+            android:layout_height="53dp"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="center"
+            android:text="가계부 내용"
+            android:textColor="#fff"
+            android:textSize="20sp" />
     </LinearLayout>
     <!-- //end 타이틀바 -->
 
     <!-- Notice -->
     <LinearLayout
-        android:padding="24dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/txtText"
-            android:textSize="15sp"
-            android:textColor="#000"
-            android:alpha="0.87"
-            android:gravity="center"
-            android:layout_marginBottom="3dp"
+        android:layout_height="312dp"
+        android:orientation="vertical"
+        android:padding="24dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleView_popup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+        </LinearLayout>
     </LinearLayout>
     <!-- Notice -->
 
     <View
-        android:background="#66bdbdbd"
         android:layout_width="match_parent"
-        android:layout_height="1dp" />
+        android:layout_height="1dp"
+        android:background="#66bdbdbd" />
 
     <!-- 닫기 버튼 -->
-    <LinearLayout
-        android:orientation="horizontal"
-        android:gravity="center"
+
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:text="확인"
-            android:textSize="15sp"
-            android:textColor="#ff7a00"
-            android:padding="16dp"
-            android:gravity="center"
-            android:background="#00000000"
-            android:layout_width="match_parent"
-            android:layout_height="53dp"
-            android:onClick="mOnClose"/>
-    </LinearLayout>
+        android:layout_height="79dp"
+        android:background="#00000000"
+        android:gravity="center"
+        android:onClick="mOnClose"
+        android:padding="16dp"
+        android:text="확인"
+        android:textColor="#ff7a00"
+        android:textSize="15sp" />
     <!--// 닫기 버튼 -->
 </LinearLayout>
