--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,6 +20,7 @@
             android:layout_marginHorizontal="30dp"
             android:src="@drawable/logo" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/textView_login"
         android:layout_width="match_parent"
@@ -26,11 +29,11 @@
         android:text="로그인"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -58,10 +61,10 @@
             android:id="@+id/button_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/solid_button"
             android:layout_marginBottom="5dp"
+            android:background="@drawable/solid_button"
             android:text="로그인하기"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
 
 
         <Button
@@ -70,8 +73,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/solid_button"
             android:text="회원가입"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/white" />
 
 
     </LinearLayout>
